# aoc2021

./: .gitattributes  Cargo.toml  README.md
src/: ac3csp.rs  bingo.rs  bitmap.rs  geometry.rs  lib.rs  matrix.rs  util.rs
